syntax="proto3";
package pb;
option java_multiple_files=true;

message PessoaId {
  uint64 id = 1;
}

message DadosPessoa {
  uint64 id = 1;
  string nome = 2;
  string documento = 3;
  uint64 enderecoId = 4;
}

service PessoaService {
  rpc GetPersonData(PessoaId) returns (DadosPessoa) {}
}